--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   "dependencies": {
     "body-parser": "^1.17.1",
     "cookie-parser": "^1.4.3",
+    "dotenv": "^16.0.3",
     "express": "^4.15.2",
+    "express-jwt": "^8.2.1",
+    "express-oauth2-jwt-bearer": "^1.3.0",
+    "helmet": "^6.0.1",
     "morgan": "^1.8.1",
     "pg": "^8.8.0",
     "pug": "^2.0.0-beta11",
@@ -22,7 +26,7 @@
     "@types/ejs": "^2.3.33",
     "@types/express": "^4.0.35",
     "@types/morgan": "^1.7.32",
-    "@types/node": "^7.0.10",
+    "@types/node": "^7.10.14",
     "@types/serve-favicon": "^2.2.28",
     "typescript": "^4.9.4"
   }
